feacture/postgress-conection, add conexion sistemas

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ NEXT_PUBLIC_REACT_APP_SUPABASE_ANON_KEY_INTERMEDIA=eyJhbGciOiJIUzI1NiIsInR5cCI6I
 # Application Port - express server listens on this port (default 3000).
 PORT=3000
 
+
+USER= 'postgres'
+HOST= 'db.joxrvydcpfckgblgcxwv.supabase.co'
+DATABASE= 'postgres'
+PASSWORD= 'F_fu%8X%xYqHJyH'
+
