--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3"
   }
 }
