--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ HOST= 'db.joxrvydcpfckgblgcxwv.supabase.co'
 DATABASE= 'postgres'
 PASSWORD= 'F_fu%8X%xYqHJyH'
 
+
+SERVIDOR_CORREO=smtp.office365.com
+PUERTO_CORREO=587
+USER_CORREO=claudiamcarvajal@uts.edu.co
+PASS_CORREO=Cmcg1996.
+
+
