--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
